# huffman-encoder

./: .buildinfo  .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_flags.txt  gcovr.cfg  genindex.html  index.html  meson.build  meson_options.txt  objects.inv  search.html  searchindex.js
.github/workflows/: docs.yml  linux.yml  macos.yml  windows.yml
_sources/: index.rst.txt
_sources/building/: compiling.rst.txt  dependencies.rst.txt  documentation.rst.txt
_sources/source_code/: index.rst.txt  source.rst.txt
_sources/usage/: decompression.rst.txt
building/: compiling.html  dependencies.html  documentation.html  tests.html
docs/: CMakeLists.txt  Doxyfile  Makefile.spx
docs/source/: conf.py  index.rst
docs/source/building/: dependencies.rst  tests.rst
docs/source/source_code/: index.rst
docs/source/usage/: compression.rst  decompression.rst
include/: HuffmanDictionary.hpp  HuffmanNode.hpp  huffman.hpp  huffman_tree_node.hpp
source_code/: index.html  source.html
src/: CMakeLists.txt  DecodingByteLoader.cpp  DecodingByteLoader.hpp  HuffmanCompressor.cpp  HuffmanCompressor.hpp  HuffmanDictionary.cpp  HuffmanNode.cpp  JsonHuffmanParser.cpp  JsonHuffmanParser.hpp  huffman.cpp  huffman.hpp  huffman_tree_node.cpp  main.cpp  meson.build
src/decoder/: ByteDecoder.hpp  ByteLoader.cpp  ByteLoader.hpp  meson.build
src/encoder/: ByteEncoder.cpp  ByteEncoder.hpp  ByteWriter.cpp  ByteWriter.hpp  meson.build
src/huffman/: DecodingByteLoader.cpp  DecodingByteLoader.hpp  HuffmanDictionary.cpp  HuffmanNode.cpp  meson.build
subprojects/: libhuffman.wrap
test/: CMakeLists.txt  huffman.cpp  main.cpp  meson.build
test/huffman/: DecodingByteLoader.cpp  huffman.cpp  meson.build  src
test/src/: HuffmanCompressor.cpp  HuffmanDictionary.cpp  HuffmanNode.cpp  JsonHuffmanParser.cpp  meson.build
test/src/decoder/: ByteDecoder.cpp  ByteLoader.cpp  meson.build
test/src/encoder/: ByteEncoder.cpp  ByteWriter.cpp  meson.build
usage/: compression.html  decompression.html
